[package]
name = "mcmeta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argparse = "0.2.2"
axum = "0.6.15"
clap = "4.2.1"
config = "0.13.3"
dotenv = "0.15.0"
futures = "0.3.28"
git2 = "0.17.0"
hyper = "0.14.25"
libmcmeta = { path = "../libmcmeta" }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
serde_valid = "0.15.0"
serde_with = "2.3.2"
tempdir = "0.3.7"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
zip = "0.6.4"
